--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,18 @@
 <nav class="navbar">
+  <%= link_to news_path, class: "navbar__item" do %>
+    <svg class="navbar__icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <!-- Newspaper icon -->
+      <rect x="3" y="4" width="18" height="16" rx="1" fill="none" stroke="currentColor" stroke-width="2"/>
+      <line x1="7" y1="8" x2="17" y2="8" stroke="currentColor" stroke-width="2"/>
+      <line x1="7" y1="12" x2="17" y2="12" stroke="currentColor" stroke-width="1"/>
+      <line x1="7" y1="15" x2="14" y2="15" stroke="currentColor" stroke-width="1"/>
+    </svg>
+    <span class="navbar__label">News</span>
+    <% if unread_news_count > 0 %>
+      <span class="navbar__badge"><%= unread_news_count %></span>
+    <% end %>
+  <% end %>
+
   <%= link_to marketplace_path, class: "navbar__item" do %>
     <svg class="navbar__icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <!-- Market stall / veggie stand icon -->
@@ -40,17 +54,5 @@
       <line x1="20" y1="18" x2="20" y2="20" stroke="currentColor" stroke-width="2"/>
     </svg>
     <span class="navbar__label">Travel</span>
-  <% end %>
-
-  <%= link_to log_path, class: "navbar__item" do %>
-    <svg class="navbar__icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-      <!-- Scroll icon -->
-      <path d="M 4 4 Q 4 2 6 2 L 18 2 Q 20 2 20 4 L 20 18 Q 20 20 18 20 L 8 20 Q 6 20 6 18 L 6 6 Q 6 4 4 4"
-            fill="none" stroke="currentColor" stroke-width="2"/>
-      <line x1="9" y1="7" x2="17" y2="7" stroke="currentColor" stroke-width="1.5"/>
-      <line x1="9" y1="11" x2="17" y2="11" stroke="currentColor" stroke-width="1.5"/>
-      <line x1="9" y1="15" x2="14" y2="15" stroke="currentColor" stroke-width="1.5"/>
-    </svg>
-    <span class="navbar__label">Log</span>
   <% end %>
 </nav>
